<resources>
    <string name="app_name">NewsApp</string>
    <string name="str_newstitle">newstitle</string>
    <string name="str_newsname">newsname</string>
    <string name="str_newsdescription">description</string>
    <string name="str_text_news">TextView</string>
    <string name="str_news_description">NewsDescription</string>
    <string name="str_title">Title</string>
    <string name="str_news_name">NewsName</string>
</resources>